samples/_failures_safe/1761427063_4d6a40_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a52b8168.c: In function ‘main’:
./samples/SAFE/__tmp_a52b8168.c:148:25: error: expected ‘)’ at end of input
  148 |     if (len > 0 && input
      |        ~                ^
      |                         )
./samples/SAFE/__tmp_a52b8168.c:148:5: error: expected declaration or statement at end of input
  148 |     if (len > 0 && input
      |     ^~
